# sidelines

./: .gitignore  LICENSE  README.md  WinDevProfile.ps1  WinSetup1.ps1  WinSetup2.ps1  WinSetup3.ps1  package.json
app/: angular.json  package.json  pnpm-lock.yaml
app/src-tauri/: tauri.conf.json
cli/: CMakeLists.txt  main.cpp  sanity_test.cpp  vcpkg.json
design/: all.ai  bishop.ai  blackbishop.ai  blackking.ai  blackknight.ai  blackknight2.ai  blackpawn.ai  blackqueen.ai  blackrook.ai  chessboard-blue.ai  fontstarter.ai  hashes.txt  horse.ai  king.ai  king2.ai  knight.ai  knight2.ai  letters.ai  logo.ai  pawn.ai  pawn2.ai  piece-tempalate-backup.ai  piece-tempalate.ai  piece-template2.ai  pieces.ai  queen.ai  queen2.ai  rook.ai  rook2.ai  whitebishop.ai  whitebishop2.ai  whiteking.ai  whiteknight.ai  whiteknight2.ai  whiteknight3.ai  whitepawn.ai  whitepawn2.ai  whitepawn3.ai  whitepawn4.ai  whitequeen.ai  (+1 more)
design/renders/: automate.py
dev/: Dockerfile
eng/: CMakeLists.txt  vcpkg.json
frontend/: angular.json  package.json  pnpm-lock.yaml
frontend/src/: index.html
frontend/src/app/: app.component.html  app.component.ts
sidelines/src-tauri/: tauri.conf.json
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src-tauri/src/core/: square.rs  square.test.rs
util/: .gitignore  Pipfile  env_vars.py  exit_codes.py  log.py  main.py  pytest.ini  requirements.txt  setup.py
util/.pytestrun/: pytest in bin.run.xml
util/core/: analysis.py  attacks.py  move.py  move_analysis.py  move_gen.py  piece.py  position.py  square.py  square_spec.py
(+13 files in other folders)
